<resources>
    <string name="app_name">VitaminReminder</string>
    <string name="settings">Настройки</string>
    <string name="vitamin_reminder_notification_title">Time to drink vitamin\'s</string>
    <string name="time_picker_key">time_picker_key</string>
    <string name="interval_key">interval_key</string>
    <string name="default_value_interval">5</string>
    <string name="interval">Interval</string>
    <string name="ten_min">10</string>
    <string name="interval_list_key">interval_list_key</string>
    <string name="pref_ten_min">10</string>
    <string name="pref_fifteen_min">15</string>
    <string name="pref_twenty_min">20</string>
    <string name="text_vitamins">Vitamins</string>
    <string name="text_news">News</string>
    <string name="text_calendar">Calendar</string>
    <string name="more">More</string>
    <string name="vitamin_name">Название лекарства</string>
    <string name="time_to_drink">Время приема</string>
    <string name="text_schedule">Расписание</string>
    <string name="every_day">Каждый день</string>
    <string name="choose_day">По опеределенным дням</string>
    <string name="save_button_text">Сохранить</string>

    <string name="task_add_done">Added</string>
    <string name="done_button_text">Выполнить</string>
    <string name="cancel_button_text">Cancel</string>
    <string name="news_title_toolbar">News</string>
    <string name="account_settings">Аккаунт</string>
    <string name="create_account">Создать аккаунт</string>
    <string name="enter_in_app">Войти</string>
    <string name="enter_in_app_summary">Вход для зарегистрированного пользователя</string>
    <string name="create_account_summary">Создать бесплатный аккаунт</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="notification">Уведомления</string>
    <string name="add_notification">Добавить уведомление</string>
    <string name="alarm">Будильник</string>
    <string name="set_alarm">Установить будильник</string>
    <string name="preference">Общие настройки</string>
    <string name="done_text">Выполнено</string>
    <string name="delete_text">Удаленное</string>
    <string name="archive_text">Архив</string>
    <string name="saved_text">Сохранено</string>
    <string name="nothing">Ничего</string>
    <string name="please_check_connection">Проверьте ваше соединение, и попробуйте снова.</string>
    <string name="delete_button_text">Удалить</string>
</resources>
