<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_list_of_vitamins"
        android:enabled="true"
        android:icon="@drawable/ic_medicine"
        android:title="@string/text_vitamins"
        app:showAsAction="ifRoom" />

<!--TODO: add news Icon-->
    <item
        android:id="@+id/action_calendar"
        android:enabled="true"
        android:title="@string/text_calendar"
        android:icon="@drawable/ic_baseline_calendar_today_24px"/>

    <item
        android:id="@+id/action_news"
        android:enabled="true"
        android:title="@string/text_news"
        android:icon="@drawable/ic_baseline_today_24px"/>

    <item
        android:id="@+id/action_more"
        android:enabled="true"
        android:title="@string/more"
        android:icon="@drawable/ic_baseline_list_24px"/>




</menu>