<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/lightGray"
    android:orientation="vertical">


    <!--<LinearLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent"-->
        <!--android:orientation="vertical">-->

    <!--<com.google.android.material.appbar.AppBarLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content">-->

        <!--<androidx.appcompat.widget.Toolbar-->
            <!--android:id="@+id/toolbar"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:background="?attr/colorPrimary"-->
            <!--android:minHeight="?attr/actionBarSize"-->
            <!--android:theme="@style/Toolbar"-->
            <!--app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />-->
    <!--</com.google.android.material.appbar.AppBarLayout>-->




    <!--TODO-->
    <android.support.v7.widget.CardView
        android:id="@+id/card_name"
        android:layout_margin="16dp"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        app:layout_constraintTop_toTopOf="parent"
        app:cardCornerRadius="4dp">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <TextView
            android:id="@+id/text_vitamin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vitamin_name"
            android:textAppearance="@android:style/TextAppearance.Large"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"/>


        <EditText
            android:id="@+id/text_name_vitamin"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_vitamin" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text_name_vitamin"
                android:paddingTop="8dp"
                android:text="Добавьте лекарство"
                android:layout_marginStart="16dp"/>

        </RelativeLayout>
    </android.support.v7.widget.CardView>


    <android.support.v7.widget.CardView
        android:id="@+id/card_time"
        android:layout_marginTop="16dp"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@+id/card_name"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        app:cardCornerRadius="4dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <TextView
            android:id="@+id/text_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_to_drink"
            android:textAppearance="@android:style/TextAppearance.Large"
            android:layout_marginStart="16dp" />

        <Spinner
            android:id="@+id/time_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginTop="16dp"
            android:layout_below="@id/text_time"/>


        <TextView
            android:id="@+id/time_picker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/time_spinner"
            android:layout_marginTop="16dp"
            android:text="18:00"
            android:textAppearance="@android:style/TextAppearance.Large"
            android:layout_marginStart="16dp" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>


    <android.support.v7.widget.CardView
        android:layout_marginTop="16dp"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@+id/card_time"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        app:cardCornerRadius="4dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/text_schedule"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_schedule"
                android:textAppearance="@android:style/TextAppearance.Large"
                android:layout_marginStart="16dp" />


            <CheckBox
                android:id="@+id/checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_schedule"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"/>

            <TextView
                android:id="@+id/text_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text_schedule"
                android:layout_marginStart="8dp"
                android:layout_marginTop="12dp"
                android:layout_toEndOf="@id/checkbox"
                android:text="@string/every_day" />

            <CheckBox
                android:id="@+id/checkbox_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/checkbox"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"/>

            <TextView
                android:id="@+id/text_checkbox2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text_checkbox"

                android:layout_toRightOf="@+id/checkbox_2"
                android:layout_marginTop="30dp"
                android:layout_marginStart="8dp"
                android:text="@string/choose_day" />

            <!--<CheckedTextView-->
                <!--android:id="@+id/every_day"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="@string/every_day"-->
                <!--android:layout_below="@id/text_schedule"-->
                <!--android:paddingTop="16dp"-->
                <!--android:paddingStart="16dp"-->
                <!--android:checkMark="?android:attr/listChoiceIndicatorMultiple"/>-->


            <!--<CheckedTextView-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="@string/choose_day"-->
                <!--android:layout_below="@id/every_day"-->
                <!--android:paddingTop="16dp"-->
                <!--android:paddingStart="16dp"-->
                <!--android:checkMark="?android:attr/listChoiceIndicatorMultiple"/>-->

        </RelativeLayout>

    </android.support.v7.widget.CardView>


    <Button
        android:id="@+id/done_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/done_button_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@color/colorPrimaryDark"/>



</android.support.constraint.ConstraintLayout>